# pdfner

./: .gitignore  .travis.yml  README.md  requirements.txt  setup.cfg
pdfner/: __init__.py  config.py  document.py  io.py  pdf.py  search.py
pdfner/nlp/: __init__.py  api.py  base.py  corenlp.py  spacy.py
pdfner/tests/: conftest.py  test_api.py  test_json_serde.py  test_search.py
