[metadata]
name = pdfner
version = 0.1.1
description = Information extraction and named-entity recognition for indexing PDFs
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
author = Hung Luu
author_email = hung.luu@outlook.com
url = https://github.com/hnluu8/pdfner
license = MIT
keywords =
    pdf, ner

[options]
packages = find:
python_requires = >=3.6, <3.8
zip_safe = False
test_suite = tests
install_requires =
    dask[delayed]==2.9.0
    simplejson==3.17.0
    pdf2image==1.4.2
    pymupdf==1.16.8
    pikepdf==1.1.0
    img2pdf==0.3.3
    textacy==0.6.2
    msgpack-python==0.5.6
    pynlp==0.4.2
tests_require =
    elasticsearch==7.1.0
    pysolr==3.8.1

[options.extras_require]
test =
    pytest >= 5.0.0
    pytest-cov
